Begin working send email
