# laravel.pv113.com/app/Http/Controllers/Api/CategoriesController.php
@@ -206,34 +206,6 @@ class CategoriesController extends Controller
             ['Content-Type' => 'application/json;charset=UTF-8', 'Charset' => 'utf-8'], JSON_UNESCAPED_UNICODE);
     }
 
-    /**
-     * @OA\Post(
-     *     tags={"Category"},
-     *     path="/api/categories/send",
-     *     @OA\RequestBody(
-     *         @OA\MediaType(
-     *             mediaType="multipart/form-data",
-     *             @OA\Schema(
-     *                 required={"email"},
-     *                 @OA\Property(
-     *                     property="email",
-     *                     type="string"
-     *                 )
-     *             )
-     *         )
-     *     ),
-     *     @OA\Response(response="200", description="Add Category.")
-     * )
-     */
-    public function send(Request $request) : JsonResponse
-    {
-        $inputs = $request->all();
 
-
-        Mail::to($inputs["email"])->send(new SampleEmail());
-
-        return response()->json($inputs["email"], 200)
-            ->header("Content-Type", 'application/json; charset=utf-8');
-    }
 
 }
