# laravel.pv113.com/routes/api.php
@@ -1,5 +1,6 @@
 <?php
 
+use App\Http\Controllers\Api\SenderController;
 use Illuminate\Http\Request;
 use Illuminate\Support\Facades\Route;
 use \App\Http\Controllers\Api\CategoriesController;
@@ -14,4 +15,4 @@ Route::post('/categories/create', [CategoriesController::class, 'create']);
 Route::delete("/categories/{id}", [CategoriesController::class, "delete"]);
 Route::post("/categories/edit/{id}", [CategoriesController::class, "edit"]);
 
-Route::post('/categories/send', [CategoriesController::class, 'send']);
+Route::post('/send/email', [SenderController::class, 'send_email']);
